k8s/traefik/03-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: traefik
  namespace: traefik
spec:
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v3.0
          args:
            - --accesslog=true
            - --entrypoints.web.address=:80
            - --api.insecure=true
            # - --log.level=DEBUG
            - --providers.kubernetescrd
            - --providers.kubernetescrd.namespaces=traefik,nginx-test,jellyfin,monitoring,authentik,radarr,sonarr,lidarr,readarr,whisparr,bazarr
          ports:
            - name: web
              containerPort: 80
              hostPort: 80 # This matches the port in your Kind config
            - name: admin
              containerPort: 8080
      terminationGracePeriodSeconds: 60
